# Monte-Carlo-based-Manifold-Ranking

./: README.md
MCMR/: CMakeLists.txt  Graph.h  MCMR  SparseMatrix.h  algo.h  alias.h  compile.sh  graphAlias.h  heap.h  main.cpp  manifoldRanking.h  ppr.h  weightedGraph.h
MCMR/dataset/: knn-test.query  knn-test.txt
MCMR/dataset/unweighted/: coil.txt  knn-test.txt
MCMR/index/knn-test/: chol_D.txt  chol_L.txt  cluster.time  incom_chol_D.txt  incom_chol_L.txt  permutation.time  permutation.txt  preprocessing.time  preprocessing_mogul_E.time  reordered_cluster.txt
MCMR/real_mr/knn-test/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
